# VTKmUsersGuide

./: Advanced.tex  AdvancedWorklets.tex  ArrayHandle.tex  BasicProvisions.tex  Body.tex  BuildAndInstall.tex  CMakeLists.txt  CodingConventions.tex  Contributors.tex  ControlEnvironment.tex  CreatingFilters.tex  DataSet.tex  Developing.tex  DeviceAdapter.tex  Distribution.tex  DynamicArrayHandle.tex  ExecutionEnvironment.tex  FancyArrayStorage.tex  FunctionInterface.tex  GettingStarted.tex  IO.tex  ImplementingDeviceAdapters.tex  Insight.sty  Introduction.tex  LanguageDefinitions.tex  Macros.tex  Math.tex  NewWorkletTypes.tex  OpenGLInteroperability.tex  Policies.tex  ProvidedFilters.tex  Rendering.tex  Timer.tex  TitlePage.tex  Using.tex  VTKmUsersGuide.tex  VirtualObjects.tex  WorkingWithCells.tex  WorkletArguments.tex  Worklets.tex
data/: camera.vtk  teapot.vtk
examples/: ArrayHandle.cxx  ArrayHandleAdapt.cxx  ArrayHandleCast.cxx  ArrayHandleCompositeVector.cxx  ArrayHandleConstant.cxx  ArrayHandleCoordinateSystems.cxx  ArrayHandleCounting.cxx  ArrayHandleDerived.cxx  ArrayHandleDiscard.cxx  ArrayHandleGroupVec.cxx  ArrayHandleImplicit.cxx  ArrayHandlePermutation.cxx  ArrayHandleTransform.cxx  ArrayHandleZip.cxx  BasicGlut.cxx  CMakeLists.txt  CellEdgesFaces.cxx  CellOperations.cxx  CellShapes.cxx  ColorTables.cxx  CoreDataTypes.cxx  CustomDeviceAdapter.cxx  DataSetCreation.cxx  DeviceAdapterAlgorithms.cxx  DeviceAdapterTag.cxx  DynamicArrayHandle.cxx  DynamicPointCoordinates.cxx  EnvironmentModifierMacros.cxx  ErrorHandling.cxx  ExportMacro.cxx  ExtractExample.cmake  FractalWorklets.cxx  FunctionInterface.cxx  IO.cxx  ListTags.cxx  Matrix.cxx  NewtonsMethod.cxx  OtherGlut.cxx  ProvidedFilters.cxx  ScatterCounting.cxx  (+11 more)
images/CameraImages/: CameraDiagramCamera.pvcc  CameraPositionOrientation.pvsm  CameraPositionOrientation.py
images/ColorTables/: Accent.ppm  Blues.ppm  BrBG.ppm  BuGn.ppm  BuPu.ppm  CubicL.ppm  CubicYF.ppm  Dark2.ppm  GnBu.ppm  Greens.ppm  Greys.ppm  IsoL.ppm  LinLhot.ppm  LinearL.ppm  OrRd.ppm  Oranges.ppm  PRGn.ppm  Paired.ppm  Pastel1.ppm  Pastel2.ppm  PiYG.ppm  PuBu.ppm  PuBuGn.ppm  PuOr.ppm  PuRd.ppm  Purples.ppm  RdBu.ppm  RdGy.ppm  RdPu.ppm  RdYlBu.ppm  RdYlGn.ppm  Reds.ppm  Set1.ppm  Set2.ppm  Set3.ppm  Spectral.ppm  YlGn.ppm  YlGnBu.ppm  YlOrBr.ppm  blue.ppm  (+10 more)
